--- a/.github/workflows/storybook-preview.yml
+++ b/.github/workflows/storybook-preview.yml
@@ -12,8 +12,8 @@ on:
       - ".github/workflows/storybook-preview.yml"
 
 permissions:
-  contents: write # Pour déployer sur gh-pages
-  pull-requests: write # Pour commenter la PR
+  contents: write # Nécessaire pour déployer sur la branche gh-pages
+  pull-requests: write # Nécessaire pour commenter la PR
 
 concurrency:
   group: storybook-pr-${{ github.event.pull_request.number }}
@@ -24,7 +24,7 @@ jobs:
   # JOB 1 : Détection des changements
   # =========================================
   detect-changes:
-    # Ne s'exécute PAS si la PR est fermée
+    # S'exécute uniquement si la PR est active (pas fermée)
     if: github.event.action != 'closed'
     name: Detect Changed Components
     runs-on: ubuntu-latest
@@ -37,15 +37,130 @@ jobs:
         with:
           fetch-depth: 0
 
-      # (Le script bash reste exactement le même, il est masqué ici pour la lisibilité)
       - name: Detect changed components and missing stories
         id: detect
         shell: bash
         run: |
           set -euo pipefail
-          # ... [Insérez ici tout votre script bash de détection original] ...
-          # Pour l'exemple, je suppose que le script est présent.
-          # Assurez-vous de remettre le contenu complet de votre script ici.
+
+          echo "🔍 Starting detection of changed components and missing stories..."
+
+          # Fetch base branch for comparison
+          BASE_BRANCH="${{ github.event.pull_request.base.ref }}"
+          git fetch origin "$BASE_BRANCH" --no-tags
+
+          # Get all changed files
+          ALL_CHANGED_FILES=$(git diff --name-only "origin/$BASE_BRANCH...HEAD" || true)
+
+          echo "📋 All changed files:"
+          echo "$ALL_CHANGED_FILES"
+
+          # Filter to keep only relevant .tsx files in src/
+          CHANGED_SRC_FILES=$(echo "$ALL_CHANGED_FILES" | grep -E "^src/(components|pages|layouts)/.*\\.tsx$" || true)
+
+          if [ -z "$CHANGED_SRC_FILES" ]; then
+            echo "✅ No changes detected in component paths."
+            echo "has-changes=false" >> "$GITHUB_OUTPUT"
+            echo "components=" >> "$GITHUB_OUTPUT"
+            exit 0
+          fi
+
+          echo "📂 Changed source files (filtered):"
+          echo "$CHANGED_SRC_FILES"
+
+          # Build components list
+          declare -A COMPONENTS
+          declare -A COMPONENT_HAS_CODE
+          # Array to store components with missing stories
+          declare -a MISSING_STORIES=()
+
+          # First pass: find all modified .stories.tsx files
+          while IFS= read -r file; do
+            if [[ $file =~ ^src/.*/([^/]+)\.stories\.(tsx?|jsx?)$ ]]; then
+              component="${BASH_REMATCH[1]}"
+              COMPONENTS[$component]=1
+              echo "  - Found modified story: $component"
+            fi
+          done <<< "$CHANGED_SRC_FILES"
+
+          # Second pass: check if corresponding component code was also modified
+          # AND CHECK FOR MISSING STORIES
+          while IFS= read -r file; do
+            # Skip if it's a story file
+            if [[ $file =~ \.stories\. ]]; then
+              continue
+            fi
+            # Match component files
+            if [[ $file =~ ^src/.*/([^/]+)\.(tsx?|jsx?)$ ]]; then
+              component="${BASH_REMATCH[1]}"
+              component_dir=$(dirname "$file")
+              
+              echo "  - Analyzing component: $component"
+              
+              # CHECK: If the component's story was not detected as modified in the first pass
+              if [[ ! -v "COMPONENTS[$component]" ]]; then
+                # Check if the story file exists physically on disk
+                story_path_tsx="$component_dir/$component.stories.tsx"
+                story_path_ts="$component_dir/$component.stories.ts"
+                
+                if [[ ! -f "$story_path_tsx" && ! -f "$story_path_ts" ]]; then
+                   echo "    ❌ Missing story file!"
+                   MISSING_STORIES+=("$component_dir/$component.stories.tsx")
+                else
+                  echo "    ✅ Story file exists (not modified)."
+                  # The story exists (but wasn't modified), mark the component as having code
+                  COMPONENT_HAS_CODE[$component]=1
+                  # And add it to the components list (for PR comment display)
+                  COMPONENTS[$component]=1
+                fi
+              else
+                echo "    ✅ Story file also modified in this PR."
+                # The story was modified in this PR, mark the component as having code
+                COMPONENT_HAS_CODE[$component]=1
+              fi
+            fi
+          done <<< "$CHANGED_SRC_FILES"
+
+          # === ERROR BLOCK FOR MISSING STORIES ===
+          if [ ${#MISSING_STORIES[@]} -gt 0 ]; then
+            echo ""
+            echo "🚫 ERROR: The following components are missing their Storybook story file:"
+            for file in "${MISSING_STORIES[@]}"; do
+              echo "  - 📄 Expected: $file"
+            done
+            echo ""
+            echo "👉 Please create a .stories.tsx file for each component in the same directory."
+            exit 1 # Fail the job
+          fi
+          # =======================================
+
+          # Build comma-separated list with details
+          COMPONENTS_LIST=""
+          for component in "${!COMPONENTS[@]}"; do
+            has_code="${COMPONENT_HAS_CODE[$component]:-false}"
+            
+            if [[ "$has_code" == "1" ]]; then
+              detail="story+code"
+            else
+              detail="story"
+            fi
+            
+            if [ -z "$COMPONENTS_LIST" ]; then
+              COMPONENTS_LIST="$component:$detail"
+            else
+              COMPONENTS_LIST="$COMPONENTS_LIST,$component:$detail"
+            fi
+          done
+
+          if [ -z "$COMPONENTS_LIST" ]; then
+            echo "has-changes=false" >> "$GITHUB_OUTPUT"
+            echo "components=" >> "$GITHUB_OUTPUT"
+            echo "✅ No components to report."
+          else
+            echo "has-changes=true" >> "$GITHUB_OUTPUT"
+            echo "components=$COMPONENTS_LIST" >> "$GITHUB_OUTPUT"
+            echo "✅ Changed components summary: $COMPONENTS_LIST"
+          fi
 
   # =========================================
   # JOB 2 : Build et Déploiement
@@ -61,7 +176,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Plus besoin de "if: github.event.action != 'closed'" sur ces étapes !
+      # Plus besoin de conditions "if" sur ces étapes de build
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
@@ -77,6 +192,7 @@ jobs:
         env:
           CI: true
 
+      # Action explicite : 'deploy'
       - name: Deploy PR Preview to GitHub Pages
         id: deploy
         uses: rossjrw/pr-preview-action@v1
@@ -84,7 +200,7 @@ jobs:
           source-dir: ./storybook-static
           preview-branch: gh-pages
           umbrella-dir: pr-preview
-          action: deploy # On force l'action 'deploy' ici
+          action: deploy
 
       - name: Comment PR with preview link
         uses: actions/github-script@v7
@@ -92,13 +208,93 @@ jobs:
           script: |
             try {
               const prNumber = context.issue.number;
+              // Récupération de l'URL depuis l'étape de déploiement précédente
               const previewUrl = '${{ steps.deploy.outputs.deployment-url }}';
+
+              // Récupération des infos du job de détection
               const componentsStr = '${{ needs.detect-changes.outputs.components }}';
               const hasChanges = '${{ needs.detect-changes.outputs.has-changes }}';
 
-              // (Le reste du script JS pour formater le commentaire reste identique)
-              // ... [Insérez ici le reste de votre script JS] ...
+              let componentsSection = '';
+              if (hasChanges === 'true' && componentsStr) {
+                const componentsList = componentsStr.split(',');
+                componentsSection = `\n### 🎨 Modified Stories\n\n`;
+                
+                const storyAndCode = [];
+                const storyOnly = [];
+                
+                componentsList.forEach(item => {
+                  const [comp, type] = item.split(':');
+                  if (type === 'story+code') {
+                    storyAndCode.push(comp);
+                  } else {
+                    storyOnly.push(comp);
+                  }
+                });
+                
+                // Added .sort() for better readability
+                if (storyAndCode.length > 0) {
+                  componentsSection += `**📖 Story + Implementation:**\n`;
+                  storyAndCode.sort().forEach(comp => {
+                    componentsSection += `- \`${comp}\` 🔄\n`;
+                  });
+                }
+                
+                if (storyOnly.length > 0) {
+                  if (storyAndCode.length > 0) componentsSection += `\n`;
+                  componentsSection += `**📚 Story Only:**\n`;
+                  storyOnly.sort().forEach(comp => {
+                    componentsSection += `- \`${comp}\`\n`;
+                  });
+                }
+                
+                componentsSection += `\n**Total:** ${componentsList.length} story/stories modified\n`;
+              } else {
+                componentsSection = '\n_No stories detected (configuration or global changes)_\n';
+              }
 
+              const comment = `## 📚 Storybook Preview Deployed
+
+              ✅ Storybook preview is ready!
+
+              YOUR PREVIEW URL:
+              👉 **[View Storybook Preview](${previewUrl})** 👈
+              
+              ---
+              ${componentsSection}
+
+              💡 **Note:** This preview will be automatically deleted when this PR is closed.
+              `;
+
+              // Find existing comment
+              const { data: comments } = await github.rest.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: prNumber,
+              });
+
+              const botComment = comments.find(comment => 
+                comment.user.type === 'Bot' && 
+                comment.body.includes('📚 Storybook Preview')
+              );
+
+              if (botComment) {
+                console.log(`Updating existing comment ${botComment.id}`);
+                await github.rest.issues.updateComment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  comment_id: botComment.id,
+                  body: comment
+                });
+              } else {
+                console.log('Creating new comment');
+                await github.rest.issues.createComment({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: prNumber,
+                  body: comment
+                });
+              }
             } catch (error) {
               console.error('Error creating/updating PR comment:', error);
               core.setFailed(`Failed to comment on PR: ${error.message}`);
@@ -117,9 +313,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Action explicite : 'remove' (pas besoin de source-dir)
       - name: Cleanup Preview from GitHub Pages
         uses: rossjrw/pr-preview-action@v1
         with:
           preview-branch: gh-pages
           umbrella-dir: pr-preview
-          action: remove # On force l'action 'remove' ici. Pas besoin de source-dir.
+          action: remove
