--- a/.github/workflows/storybook-preview.yml
+++ b/.github/workflows/storybook-preview.yml
@@ -201,7 +201,7 @@ jobs:
           preview-branch: gh-pages
           umbrella-dir: pr-preview
           action: deploy
-
+          comment: false
       - name: Comment PR with preview link
         uses: actions/github-script@v7
         with:
